--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-end",
+  "name": "cwchallenge",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,7 +13,6 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
